colang-cli/tests/samples/features/traits/good/empty_with_implementor.co
trait Foo { }

struct Bar : Foo { }

fun main() { }
