colang-cli/tests/samples/features/traits/compile_error/method_with_body.co
trait Foo {
    fun bar(self) { }
}

fun main() { }
